criando os elementos e design do card

--- a/index.html
+++ b/index.html
@@ -5,10 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Responsive Card Hover Effects | Uncharted 4 Cards UI Design</title>
+    
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
-
+        <div class="card">
+            <div class="content">
+                <h2>Nathan Drake</h2>
+                <p>Lorem ipsum ornare curabitur rhoncus inceptos ut mi, id sagittis nunc nisl sed metus mattis, elementum porttitor quis erat lacus convallis.</p>
+                <a href="#">Read More</a>
+            </div>
+            <img src="img/nathan.png" alt="Nathan Drake">
+        </div>
+        <div class="card">
+            <div class="content">
+                <h2>Sam Drake</h2>
+                <p>Lorem ipsum ornare curabitur rhoncus inceptos ut mi, id sagittis nunc nisl sed metus mattis, elementum porttitor quis erat lacus convallis.</p>
+                <a href="#">Read More</a>
+            </div>
+            <img src="img/sam.png" alt="Sam Drake">
+        </div>
     </div>
 </body>
 </html>
